# regcheck-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  classifier.py  env_config.py  knowledge_base.py  main.py  models.py  package-lock.json  pyproject.toml  render.yaml  requirements.txt  rules.py  runtime_state.py  standards_engine.py  test_matching.py
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: main.py
contracts_export/: CONTRACT_NOTES.md  analysis_complex_iot_appliance.json  analysis_mains_appliance.json  analysis_radio_product.json  openapi.json
data/: classifier_signals.yaml  legislation_catalog.yaml  product_extensions.yaml  product_genres.yaml  products.yaml  standard_extensions.yaml  standards.yaml  traits.yaml
docs/: backend_calibration.md  catalog_extension.md  classifier_signals.md  taxonomy_governance.md
scripts/: __init__.py  benchmark_rulegrid_v2.py  catalog_audit.py  eval_matching.py  export_contracts.py  package_source.py  quality.ps1  shadow_compare.py
tests/: __init__.py  benchmark_cases.py  calibration_fixtures.py  matching_quality_fixtures.py  test_api_contract.py  test_backend_hardening.py  test_benchmark_suite.py  test_calibration_fixtures.py  test_catalog_standard_integrity.py  test_classifier_hardening.py  test_matching.py  test_matching_quality_wave.py  test_matching_regressions.py  test_red_routing.py  test_refactor_modules.py  test_route_normalization.py  test_routing_regression.py  test_rulegrid_pass2_regression.py  test_taxonomy_governance.py  test_v3_adapters.py  test_v3_ownership.py
(+176 files in other folders)
