[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rulegrid-backend"
version = "6.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.135.1",
  "uvicorn[standard]==0.42.0",
  "pydantic==2.12.5",
  "PyYAML==6.0.3",
  "python-dotenv==1.2.2",
  "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.11",
  "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["F", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
